@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-07T16:09:25Z",
+  "timestamp" : "2024-02-08T00:29:56Z",
   "count_outdated" : 672,
   "uniques_outdated" : 322,
-  "count" : 700,
+  "count" : 701,
   "uniques" : 336,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
