@@ -1,3 +1,12 @@
+2024-02-08T00:29:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7823046140 # 96
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
+* notice: last 14d: unq all: 1 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 322 672 / 336 700
+* notice: next accum: outdated-unq outdated-all / unq all: 322 672 / 336 701
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-02-07]
+
 2024-02-07T16:09:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7817719941 # 95
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
